FIX Improves dark mode readability.
Ensures that text within spans is visible in dark mode by setting the text color to a light shade of the primary color for Lighthouse Accessibility

--- a/src/styles/dark.less
+++ b/src/styles/dark.less
@@ -17,6 +17,10 @@
     body.dark-mode {
         background-color: var(--dark);
 
+        span {
+            color: var(--primaryLight);
+        }
+
         p,
         li,
         h1,
